add prettier to game host
