# game-host/openapi/game_host_openapi.json
@@ -83,6 +83,7 @@
     },
     "/games/{id}": {
       "get": {
+        "description": "Get the status of a game for the authenticated player",
         "parameters": [
           {
             "schema": {
@@ -139,6 +140,7 @@
     },
     "/games/{id}/guess": {
       "post": {
+        "description": "Submit a guess for a game for the authenticated player",
         "requestBody": {
           "content": {
             "application/json": {
@@ -222,7 +224,16 @@
         }
       }
     },
-    "/health/db": {
+    "/health/live": {
+      "get": {
+        "responses": {
+          "200": {
+            "description": "Default Response"
+          }
+        }
+      }
+    },
+    "/health/ready": {
       "get": {
         "responses": {
           "200": {
